--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -729,7 +729,7 @@ nav a:hover::before {
 	text-align: center;
 	font-size: 13px;
 	color: #fff;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 
 .footer .content p a {
@@ -741,7 +741,7 @@ nav a:hover::before {
 
 /* REPONSIVE */
 
-@media (max-width: 991px) {
+@media (max-width: 1024px) {
 
 	nav ul {
   		margin-left: 25px;
@@ -757,6 +757,10 @@ nav a:hover::before {
 		float: none;
 		margin-right: 0px;
 		margin-bottom: 30px;
+	}
+	
+	.first-content h1 {
+		font-size: 24px;
 	}
 
 	.third-content .first-section {
@@ -791,10 +795,15 @@ nav a:hover::before {
 	.fifth-content #contact {
 		padding: 30px 30px 30px 30px;
 	}
-
+	
+	.footer .content p {
+		font-size: 11px;
+		margin-bottom: 5px;
+	}
+	
 }
 
-@media (max-width: 749px) {
+@media (max-width: 768px) {
 
 	nav {
 		width: 15vh;
@@ -860,7 +869,7 @@ nav a:hover::before {
 
 }
 
-@media(max-width: 450px) {
+@media(max-width: 425px) {
 	nav ul {
 		margin-top: 30px;
 	}
@@ -871,15 +880,16 @@ nav a:hover::before {
 	  	padding: 15px 20px;
 	}
 	
-	.hide-in-mobile{
-		display:none;
-	}
-	
 	.fourth-content .item .hover-effect h2 {
 		font-size: 12px;
 	}
 	
 	.fourth-content .item .hover-effect p {
 		display:none;
+	}
+	
+	.footer .content p {
+		font-size: 9px;
+		margin-bottom: 0px;
 	}
 }
