--- a/css/grt-youtube-popup.css
+++ b/css/grt-youtube-popup.css
@@ -29,13 +29,7 @@
 
 .grtyoutube-iframe {
 	width:100%;
-	height:480px;
-}
-@media (max-width:767px) {
-	.grtyoutube-iframe {
-		width:100%;
-		height:350px;
-	}
+	height:100%;
 }
 
 .grtyoutube-dark-theme{
