--- a/css/grt-youtube-popup.css
+++ b/css/grt-youtube-popup.css
@@ -10,7 +10,9 @@
 .grtyoutube-popup-content {
 	margin-top:150px;
 	width:95%;
+	height:95%;
 	max-width:850px;
+	max-height:480px;
 	margin-left:auto;
 	margin-right:auto;
 	position:relative;
