--- a/css/grt-youtube-popup.css
+++ b/css/grt-youtube-popup.css
@@ -10,9 +10,7 @@
 .grtyoutube-popup-content {
 	margin-top:150px;
 	width:95%;
-	height:95%;
 	max-width:850px;
-	max-height:480px;
 	margin-left:auto;
 	margin-right:auto;
 	position:relative;
@@ -31,7 +29,19 @@
 
 .grtyoutube-iframe {
 	width:100%;
-	height:100%;
+	height:480px;
+}
+@media (max-width:768px) {
+	.grtyoutube-iframe {
+		width:100%;
+		height:360px;
+	}
+}
+@media (max-width:425px) {
+	.grtyoutube-iframe {
+		width:100%;
+		height:240px;
+	}
 }
 
 .grtyoutube-dark-theme{
